# CMakeList.txt : CMake project for ParenthesisMatching, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ParenthesisMatching "ParenthesisMatching.cpp" "ParenthesisMatching.h" "Stack.h" "Stack.cpp")

# TODO: Add tests and install targets if needed.
